--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300&display=swap">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300&display=swap">
+    <!-- favicon -->
+    <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="wrapper">
